# TrezEnv

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  trezenv  trezenv.py
.github/: FUNDING.yml
cli_commands/: __init__ .py  setup.py
primals/: __init__.py
primals/scripts/: __init__.py  environment_initialize.py
primals/systems/: __init__.py  path_finder.py
