[project]
name = "trezenv"
version = "1.1.0"
description = "Create replicable C++ environments and manage dependencies using the vcpkg toolchain."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "nuitka (>=2.7.13,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
trezenv = "trezenv:cli" 